# witty

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: black.yaml  ci.yaml  mypy.yaml  publish.yaml  tests.yaml
src/witty/: __init__.py  compile_module.py
tests/: test_compile.py  test_hash_injection.py
