[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "witty"
description = "Well-in-Time Compiler for Cython Modules"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
  { email = "funkej@janelia.hhmi.org", name = "Jan Funke" },
  { email = "talley.lambert@gmail.com", name = "Talley Lambert" },
]
dynamic = ["version"]
dependencies = [
  "Cython >= 3.0,<3.2",
  "setuptools",
  "nanobind"
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.optional-dependencies]
cython = ["Cython >= 3.0,<3.2"]
nanobind = ["nanobind"]

[dependency-groups]
dev = ['pytest', 'ruff', 'mypy', 'pdoc', 'pre-commit', 'ipython', 'pytest-cov']

[project.urls]
homepage = "https://github.com/funkelab/witty"
repository = "https://github.com/funkelab/witty"

[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",  # style errors
  "F",  # flakes
  "W",  # warnings
  "I",  # isort
  "UP", # pyupgrade
]

[tool.mypy]
files = "src/**/*.py"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--color=yes", "-v"]
testpaths = ["tests"]
filterwarnings = ["error", "ignore:the distutils:DeprecationWarning"]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError",
  "raise NotImplementedError()",
  "pass",
]

[tool.coverage.run]
source = ["src/witty"]
